---
source: crates/math-core/tests/error_test.rs
expression: "\\bigl x 1 \\bigr)"
---
Position: 6..7
ExpectedDelimiter {
    location: Big,
    got: Letter(
        'x',
        True,
    ),
}
